feat(Building集合): 支持保存计数索引与可空引用